# mypher

./: README.md
app/source/: main.js  package-lock.json  package.json  sv.js
app/source/api/: cipher.js  cmn.js  list.js  multisig.js  person.js  system.js  task.js  token.js  user.js
app/source/cmn/: logger.js  util.js
app/source/config/: default.yaml
app/source/db/: eos.js  ipfs.js
app/source/static/: index.html
app/source/static/css/: common.css  footer.css  header.css  index.css  list.css
app/source/static/js/: account.js  cipher.js  cipherhist.js  common.js  debuglayout.js  footer.js  header.js  history.js  index.js  lang.js  list.js  multisig.js  payreq.js  search.js  task.js  token.js  tokenuse.js  user.js
app/source/static/parts/: account.html  cipher.html  cipherhist.html  footer.html  header.html  list.html  login.html  multisig.html  openwallet.html  payreq.html  reqpay.html  search.html  task.html  token.html  tokenuse.html  user.html
doc/: data_structure.txt  docker_shell.txt  multisig.txt  process_multisig.txt
docker/: create_container.sh  create_network.sh  inittmp.sh  prepare_for_mac.sh  start.sh  start_all.sh  stop.sh  stop_all.sh  ver.properties
docker/contracts/eosio.bios/: eosio.bios.abi
docker/contracts/eosio.msig/: eosio.msig.abi
docker/contracts/eosio.system/: eosio.system.abi
docker/contracts/eosio.token/: eosio.token.abi
docker/contracts/mypher/: mypher.abi
docker/envfile/: eosio.env  myphersystem.env  node1.env  node2.env  swarm.key  testuser.env  user.env
docker/image/: Dockerfile  Dockerfile2  make.sh  make2.sh
docker/nodeenv/: base_config.ini  mypher_config.ini  p2plist.ini
docker/scripts/: bootstrap.js  common.sh  create_account.sh  create_producer.sh  create_voter.sh  createaccount.sh  createwallet.sh  main.sh  openwallet.sh  prepare_eosio.sh  run.sh  setcontract.sh  start.sh  start_eosio.sh  start_myphersystem.sh  start_user.sh  stop.sh
smartcontract/: CMakeLists.txt  cipher.cpp  cipher.hpp  multisig.cpp  multisig.hpp  mypher.abi  mypher.cpp  mypher.hpp  mypherbase.cpp  mypherbase.hpp  myphersystem.abi  person.cpp  person.hpp  task.cpp  task.hpp  token.cpp  token.hpp
smartcontract/common/: conv.cpp  conv.hpp  messageid.h  prim.cpp  prim.hpp  type.hpp  validator.cpp  validator.hpp
smartcontract/test/: cipher.js  eos.js  package-lock.json  task.js  test.js  test.sh  token.js  tools.js
smartcontract/test/docker/: generate.sh  start.sh
smartcontract/test/docker/envfile/: test.env
smartcontract/test/docker/scripts/: base_config.ini  init.sh
smartcontract/test/keys/: test1.key  test2.key  test3.key  test4.key
smartcontract/tools/: make_abi.js
smartcontract/validator/: vcipher.cpp  vcipher.hpp  vcommon.cpp  vcommon.hpp  vperson.cpp  vperson.hpp
